--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   },
   "homepage": "https://github.com/JeffClark1717/movie_api#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "eslint": "^8.41.0"
   }
 }
