--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "movie_api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "codes": "nodemon index"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -27,5 +27,6 @@
   "devDependencies": {
     "eslint": "^8.41.0",
     "nodemon": "^2.0.22"
-  }
+  },
+  "description": ""
 }
