--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   },
   "homepage": "https://github.com/JeffClark1717/movie_api#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^7.3.0",
@@ -31,7 +34,7 @@
   },
   "devDependencies": {
     "eslint": "^8.41.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^1.14.9"
   },
   "description": ""
 }
